c4prj3_finish/grade.txt
Grading at Thu Oct 15 16:21:40 UTC 2020
Running 'make clean' to do a clean build of your project
rm -f test poker test-eval *~ vg*
Running 'make poker OTHERFLAGS=-O3' to build your project
gcc -o poker -Wall -Werror -ggdb3 -std=gnu99 -pedantic -O3 cards.c deck.c eval.c future.c input.c main.c
main.c: In function ‘main’:
main.c:101:20: error: comparison between pointer and integer [-Werror]
     for (int i=0; i<n_hands; i++){
                    ^
main.c:104:15: error: array subscript is not an integer
     count_wins[n_hands]=num_sim;
               ^
main.c:118:13: error: ‘deck’ undeclared (first use in this function)
   free_deck(deck);
             ^
main.c:118:13: note: each undeclared identifier is reported only once for each function it appears in
cc1: all warnings being treated as errors
Makefile:4: recipe for target 'poker' failed
make: *** [poker] Error 1
make failed

Overall Grade: F
